[tool.poetry]
name = "modelaapi"
version = "0.4.135"
description = "data science for modela."
authors = ["tsagi <tsagi@metaprov.com>"]
keywords = ["modela", "automl"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/metaprov/modela/pycode"
repository = "https://github.com/metaprov/modela/pycode"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.41.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"